--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,10 +31,10 @@
         </nav>
     </div>
 
-    <div>
+    <div class="topSearch">
         <img class="npmLogo" src="images/npm-logo.png" alt="npm logo">
 
-        <form action="/">
+        <form class="searchForm" action="/">
             <input type="text" name="package-name" id="package-name" placeholder="Search packages">
             <input type="submit" value="Search">
         </form>
